objects/Case.object
<CustomObject>
    <fields>
        <fullName>Additional_details_on_your_enquiry__c</fullName>
        <label>Additional details on your enquiry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Controlling_for_Additional_Details__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Login Issue</fullName>
                </value>
                <value>
                    <fullName>Registration Issue</fullName>
                </value>
                <value>
                    <fullName>System Compatibility</fullName>
                </value>
                <value>
                    <fullName>Test Status Enquiry</fullName>
                </value>
                <value>
                    <fullName>Simple System Navigation</fullName>
                </value>
                <value>
                    <fullName>Disability Query</fullName>
                </value>
                <value>
                    <fullName>System Performance</fullName>
                </value>
                <value>
                    <fullName>Invitation / Email not Received</fullName>
                </value>
                <value>
                    <fullName>Candidate Query</fullName>
                </value>
                <value>
                    <fullName>General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Customer Requests Results / Scores</fullName>
                </value>
                <value>
                    <fullName>Results Request</fullName>
                </value>
                <value>
                    <fullName>Test Purpose Enquiry</fullName>
                </value>
                <value>
                    <fullName>Test Link broken</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Systems related</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Timer Extension Request</fullName>
                </value>
                <value>
                    <fullName>Results Generation Issue</fullName>
                </value>
                <value>
                    <fullName>Other, Please Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Contact__c</fullName>
        <description>Administrator Contact</description>
        <label>Admin Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Call Assignment selection to redirect cases to correct Regional Helpdesk</description>
        <inlineHelpText>Only raise a case to Legal following discussion with your Manager or Team Leader</inlineHelpText>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>!!Please Select a Helpdesk!!</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>AM APAC Technical Support</fullName>
                </value>
                <value>
                    <fullName>AM China Technical Support</fullName>
                </value>
                <value>
                    <fullName>AM EMEA Technical Support</fullName>
                </value>
                <value>
                    <fullName>Americas Client Helpdesk</fullName>
                </value>
                <value>
                    <fullName>AM Presales</fullName>
                </value>
                <value>
                    <fullName>AMS PS Branding</fullName>
                </value>
                <value>
                    <fullName>AMS PS Cases</fullName>
                </value>
                <value>
                    <fullName>AM US Technical Support</fullName>
                </value>
                <value>
                    <fullName>APAC client helpdesk</fullName>
                </value>
                <value>
                    <fullName>APAC Customer Experience</fullName>
                </value>
                <value>
                    <fullName>APAC Helpdesk</fullName>
                </value>
                <value>
                    <fullName>APAC Technical Support</fullName>
                </value>
                <value>
                    <fullName>Bureau</fullName>
                </value>
                <value>
                    <fullName>Bureau helpdesk</fullName>
                </value>
                <value>
                    <fullName>CEB Sunstone Analytics Client Advisors</fullName>
                </value>
                <value>
                    <fullName>China Customer Experience</fullName>
                </value>
                <value>
                    <fullName>China Technical Support</fullName>
                </value>
                <value>
                    <fullName>CSIT</fullName>
                </value>
                <value>
                    <fullName>Customer Collections</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Customer Experience general</fullName>
                </value>
                <value>
                    <fullName>Customer Experience onboarding</fullName>
                </value>
                <value>
                    <fullName>Customer Systems Training</fullName>
                </value>
                <value>
                    <fullName>EMEA Customer Experience</fullName>
                </value>
                <value>
                    <fullName>EMEA TAM</fullName>
                </value>
                <value>
                    <fullName>EMEA Technical Support</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>India APAC Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <description>The Email Id of the Assignee whom the Case notification has to be sent</description>
        <label>Assignee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attachment_Body__c</fullName>
        <description>This field captures the content of File/Attachment from the Contact Us form - Powered by Unymira</description>
        <label>Attachment Body (Backend Use Only)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <description>This field captures the file/attachment name from the Contact Us web form - Powered by Unymira</description>
        <label>Attachment Name (Backend Use Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <description>Start time for the automation Bypass date/Time. Control field, used in SSE-14344</description>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Bureau Job Number if relevant</inlineHelpText>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>From call logging</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Manager Referral</fullName>
                </value>
                <value>
                    <fullName>Assessment Preview</fullName>
                </value>
                <value>
                    <fullName>Candidate Support call</fullName>
                </value>
                <value>
                    <fullName>Courses/Training/Qualifications</fullName>
                </value>
                <value>
                    <fullName>Course Sales / Bookings</fullName>
                </value>
                <value>
                    <fullName>DC Enquiry</fullName>
                </value>
                <value>
                    <fullName>Delivery/Returns</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Demo Actual Responses Report</fullName>
                </value>
                <value>
                    <fullName>Disability query</fullName>
                </value>
                <value>
                    <fullName>Distributors Orders</fullName>
                </value>
                <value>
                    <fullName>External Sales/Marketing call</fullName>
                </value>
                <value>
                    <fullName>Goodwill gesture</fullName>
                </value>
                <value>
                    <fullName>Internal Product Support</fullName>
                </value>
                <value>
                    <fullName>Internal SHL support</fullName>
                </value>
                <value>
                    <fullName>Invoice/Credit/Licence</fullName>
                </value>
                <value>
                    <fullName>Lead Qualifications &amp; Processing</fullName>
                </value>
                <value>
                    <fullName>Leased Materials</fullName>
                </value>
                <value>
                    <fullName>Legacy/offline support</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Order Investigation</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>P&amp;P/Book Orders</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Phone Issue</fullName>
                </value>
                <value>
                    <fullName>Phone Issues</fullName>
                </value>
                <value>
                    <fullName>PO Number Received</fullName>
                </value>
                <value>
                    <fullName>Pricing Queries</fullName>
                </value>
                <value>
                    <fullName>Product Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <inlineHelpText>Candidates are not listed as contacts on SFDC so it is necessary to select either of these options when logging the case.</inlineHelpText>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_s_Name__c</fullName>
        <label>Caller&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_Address__c</fullName>
        <description>Note - there is already a field called candidate_email which is used for contact email.</description>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Tel__c</fullName>
        <description>Contact Telephone Number</description>
        <label>Contact Tel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Telephone__c</fullName>
        <label>Candidate Tel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <description>Read only for self service web to case 3 digit country code.</description>
        <inlineHelpText>Read only for self service web to case 3 digit country code.</inlineHelpText>
        <label>Case Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>CHN</fullName>
                </value>
                <value>
                    <fullName>DEU</fullName>
                </value>
                <value>
                    <fullName>DNK</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>FRA</fullName>
                </value>
                <value>
                    <fullName>GBR</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>ITA</fullName>
                </value>
                <value>
                    <fullName>NLD</fullName>
                </value>
                <value>
                    <fullName>NOR</fullName>
                </value>
                <value>
                    <fullName>SWE</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>ZAF</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>ARE</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BDI</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BGR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Assigned_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account needs unblocking</fullName>
                </value>
                <value>
                    <fullName>Add Qualifications</fullName>
                </value>
                <value>
                    <fullName>Admin Messages</fullName>
                </value>
                <value>
                    <fullName>AM/BDM query</fullName>
                </value>
                <value>
                    <fullName>Assessment Process</fullName>
                </value>
                <value>
                    <fullName>Assign Team</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoice</fullName>
                </value>
                <value>
                    <fullName>Billing or Invoice Enquiry</fullName>
                </value>
                <value>
                    <fullName>Brainbench</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Bureau Operator Error</fullName>
                </value>
                <value>
                    <fullName>Bureau Project</fullName>
                </value>
                <value>
                    <fullName>Bureau Services Compliment</fullName>
                </value>
                <value>
                    <fullName>Bureau Services Error</fullName>
                </value>
                <value>
                    <fullName>Bureau Services Project</fullName>
                </value>
                <value>
                    <fullName>BureauTask</fullName>
                </value>
                <value>
                    <fullName>Business Outcomes Study</fullName>
                </value>
                <value>
                    <fullName>Certificate Request</fullName>
                </value>
                <value>
                    <fullName>Client callback</fullName>
                </value>
                <value>
                    <fullName>Client Callback / Other</fullName>
                </value>
                <value>
                    <fullName>Client Call Back / Other</fullName>
                </value>
                <value>
                    <fullName>Client Callback / Other  - Express</fullName>
                </value>
                <value>
                    <fullName>Client Call Back / Other - Express</fullName>
                </value>
                <value>
                    <fullName>Client Callback / Other - Project</fullName>
                </value>
                <value>
                    <fullName>Client Call Back / Other - Project</fullName>
                </value>
                <value>
                    <fullName>Client Requested Callback</fullName>
                </value>
                <value>
                    <fullName>Commercial (price, sale, competition, RFPs)</fullName>
                </value>
                <value>
                    <fullName>Comparison Groups and Norms</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_town__c</fullName>
        <label>City/town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Candidates Email Address</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Controlling_for_Additional_Details__c</fullName>
        <label>Please Select Type of Enquiry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Technical Support</fullName>
                </value>
                <value>
                    <fullName>Client Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Candidate Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Effort_Total__c</fullName>
        <formula>(PM_Days__c  + Tech_Days__c +  Occ_Psych_Days__c +QA_Days__c  + MM_Days__c + Integration_Days__c + Localisation_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Effort Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>Cardholder’s First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Days__c</fullName>
        <label>Integration Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSupport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility requests and queries</fullName>
                </value>
                <value>
                    <fullName>Best Practice – Disabilities</fullName>
                </value>
                <value>
                    <fullName>Best Practice - Test Choice, Process, EO</fullName>
                </value>
                <value>
                    <fullName>Commercial - Price, sale, compet, RFP</fullName>
                </value>
                <value>
                    <fullName>Comparison Groups and Norms</fullName>
                </value>
                <value>
                    <fullName>DEI related queries</fullName>
                </value>
                <value>
                    <fullName>Equating Products/Scores</fullName>
                </value>
                <value>
                    <fullName>IP Release/Data Protection/Legal</fullName>
                </value>
                <value>
                    <fullName>Localisation Requests</fullName>
                </value>
                <value>
                    <fullName>Platform-related</fullName>
                </value>
                <value>
                    <fullName>Product/language availability</fullName>
                </value>
                <value>
                    <fullName>Product Docs (manuals, factsheets, etc)</fullName>
                </value>
                <value>
                    <fullName>Product Issues or Complaints</fullName>
                </value>
                <value>
                    <fullName>Research Partnership Request</fullName>
                </value>
                <value>
                    <fullName>Sales/Marketing materials</fullName>
                </value>
                <value>
                    <fullName>Scores and score interpretation</fullName>
                </value>
                <value>
                    <fullName>Technical or Science Product Queries</fullName>
                </value>
                <value>
                    <fullName>Validation, Business Outcomes Studies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Cardholder’s Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localisation_Days__c</fullName>
        <label>Localisation Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MM_Days__c</fullName>
        <label>MM Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Integrator__c</fullName>
        <label>New Integrator?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occ_Psych_Days__c</fullName>
        <label>Occ. Psych Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Activation_Date__c</fullName>
        <label>Order Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order (Legacy)</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Days__c</fullName>
        <label>PM Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Please_select_the_type_of_enquiry__c</fullName>
        <label>Please select type of enquiry you have</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product, billing or ordering query</fullName>
                </value>
                <value>
                    <fullName>Technology related questions or issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesPreviousOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem2__c</fullName>
        <label>Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager/CX Question</fullName>
                </value>
                <value>
                    <fullName>Brainbench Question</fullName>
                </value>
                <value>
                    <fullName>Account Usage</fullName>
                </value>
                <value>
                    <fullName>Data deletion</fullName>
                    <label>Data Deletion</label>
                </value>
                <value>
                    <fullName>GDPR / Legal</fullName>
                </value>
                <value>
                    <fullName>Hiring Company</fullName>
                </value>
                <value>
                    <fullName>Practice Site</fullName>
                </value>
                <value>
                    <fullName>Test/Session Status Question</fullName>
                </value>
                <value>
                    <fullName>System Maintenance/Enhancement/Customisation</fullName>
                </value>
                <value>
                    <fullName>Disability Question</fullName>
                </value>
                <value>
                    <fullName>Integrated/3rd Party System</fullName>
                </value>
                <value>
                    <fullName>Interface Navigation</fullName>
                </value>
                <value>
                    <fullName>Invitation/email not received</fullName>
                    <label>Invitation/Email Not Received</label>
                </value>
                <value>
                    <fullName>Login Issue</fullName>
                </value>
                <value>
                    <fullName>System Compatibility Issue</fullName>
                </value>
                <value>
                    <fullName>System Performance Issue</fullName>
                </value>
                <value>
                    <fullName>Managed Services Error</fullName>
                </value>
                <value>
                    <fullName>Managed Services Project</fullName>
                </value>
                <value>
                    <fullName>Registration Issue</fullName>
                </value>
                <value>
                    <fullName>Integrated / 3rd Party System</fullName>
                </value>
                <value>
                    <fullName>Customer Requests Results / Scores</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Disability Query</fullName>
                </value>
                <value>
                    <fullName>Test/Questionnaire/Session ID Expired</fullName>
                </value>
                <value>
                    <fullName>Send Qualtrics Survey</fullName>
                </value>
                <value>
                    <fullName>Opportunity MisMatch</fullName>
                </value>
                <value>
                    <fullName>Platform Inquiry</fullName>
                </value>
                <value>
                    <fullName>Platform Incident</fullName>
                </value>
                <value>
                    <fullName>SHLOnline Payment</fullName>
                </value>
                <value>
                    <fullName>Test Reset Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>